<resources>
    <string name="app_name">DANJI</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_inbox">Inbox</string>
    <string name="action_home">Home</string>
    <string name="action_search">Search</string>
    <string name="action_write">Write</string>
    <string name="action_mypage">MyPage</string>
    <string name="write_movie">MOVIE</string>
    <string name="write_drama">DRAMA</string>
    <string name="write_book">BOOK</string>
    <string name="write_poem">POEM</string>
    <string name="write_music">MUSIC</string>
    <string name="write_cartoon">CARTOON</string>
    <string name="contents_reference_mark">中</string>
    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigaion drawer</string>
    <string name="complete">COMPLETE</string>
    <string name="cancel">CANCEL</string>
    <string name="write">WRITE</string>
    <string name="write_title">TITLE</string>
    <string name="character_name">CHARACTER</string>
    <string name="dialog_quotation">DIALOG</string>
    <string name="camera">CAMERA</string>
    <string name="gallery">GALLERY</string>
    <string name="no_picture">NO picture</string>
    <string name="creator">CREATOR</string>
    <string name="paragraph">PARAGRAPH</string>
    <string name="like">I like it!</string>
    <string name="save">successfully saved!</string>
    <string name="desc_list_item_icon">Item icon</string>
    <string name="search_keyword">NAVER Search\ </string>
    <string name="clear_btn">CANCEL</string>
    <string name="own_danji">\'s DANJI</string>
    <string name="my_wall">Wall</string>
    <string name="my_inbox">Inbox</string>
    <string name="photo_edit">PHOTO</string>
    <string name="previous_window">PRE</string>
    <string name="crop_button">CROP</string>
    <string name="popular_contents_rank">Popular contents rank</string>
    <string name="subscription_rank">You can search contents in DANJI</string>
    <string name="result_canceled">Canceled the image capture</string>
    <string name="result_failed">Failed the image capture</string>
    <string name="photo_load_fail">Failed the image load</string>
    <string name="album_name">DANJI</string>
    <string name="facebook_app_id">1022488864458596</string>
    <string name="welcome">WELCOME</string>
    <string name="hi">:)</string>
    <string name='logging_in'>Logging in ...</string>
    <string name='parse_app_id'>9bsJRraxnOoVjbhqsCjA35Gb4OMc29jzwcuZCKRq</string>
    <string name='parse_client_key'>A3ydVgCH2c8QKwLUEmUS36fMprzVingTwDuMVyGb</string>
    <string name='signup'>SIGNUP</string>
    <string name='login'>LOGIN</string>
    <string name='logout'>LOGOUT</string>
    <string name='user_name'>USER NAME</string>
    <string name='password'>PASSWORD</string>
    <string name="start_danji">START DANJI</string>
    <string name="pick_inbox">pick inbox</string>
    <string name="empty_result">Search result is empty</string>
    <string name="empty_form">You have to fill title, body, image</string>



</resources>
