<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:fillViewport="true">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/commonColor">
        <LinearLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            android:orientation="horizontal"
            android:paddingRight="5dp"
            android:paddingLeft="5dp">
            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/none"
                android:text="@string/cancel"
                android:textColor="@color/commonColor"
                android:onClick="buttonClick"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/write"
                android:textColor="@color/commonColor"
                android:gravity="center"
                android:textSize="30dp"/>
            <Button
                android:id="@+id/complete_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/none"
                android:text="@string/complete"
                android:textColor="@color/commonColor"
                android:onClick="buttonClick"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <EditText
                android:id="@+id/write_title_d"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/write_title"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@color/contentsBackroundColor"
                android:textSize="15sp"/>
            <EditText
                android:id="@+id/write_creator_d"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/creator"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@color/commonColor"
                android:textSize="15sp"/>
            <LinearLayout
                android:id="@+id/dialog_write_form"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/contentsBackroundColor">
                <EditText
                    android:id="@+id/write_character_d"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="0.5"
                    android:hint="@string/character_name"
                    android:textSize="15sp"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"/>
                <EditText
                    android:id="@+id/write_dialog_d"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:hint="@string/dialog_quotation"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textSize="15sp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/write_form_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>
            <ImageButton
                android:id="@+id/add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_white_24dp"
                android:background="@color/tabColor"
                android:layout_gravity="end"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:onClick="buttonClick"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:background="@color/commonColor">
            <ImageView
                android:id="@+id/dialog_imageview"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_wallpaper_white_24dp"
                android:contentDescription="@string/no_picture"
                android:layout_margin="20dp"
                android:scaleType="fitXY"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/camera"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/camera"
                    android:textColor="@color/commonColor"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:background="@color/ColorPrimary"
                    android:layout_marginRight="5dp"
                    android:onClick="buttonClick"/>
                <Button
                    android:id="@+id/gallery"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/gallery"
                    android:textColor="@color/commonColor"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:background="@color/ColorPrimary"
                    android:onClick="buttonClick"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>
