<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/edit_photo_upperbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        android:orientation="horizontal"
        android:paddingRight="5dp"
        android:paddingLeft="5dp">
        <Button
            android:id="@+id/photo_edit_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/none"
            android:text="@string/cancel"
            android:textColor="@color/commonColor"
            android:onClick="buttonClick"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/photo_edit"
            android:textColor="@color/commonColor"
            android:gravity="center"
            android:textSize="30dp"/>
        <Button
            android:id="@+id/photo_edit_complete_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/none"
            android:text="@string/complete"
            android:textColor="@color/commonColor"
            android:onClick="buttonClick"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/photo_load_location"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/tabColor"/>
    <LinearLayout
        android:id="@+id/edit_photo_underbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        android:orientation="horizontal"
        android:paddingRight="5dp"
        android:paddingLeft="5dp">
        <ImageButton
            android:id="@+id/crop_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/none"/>
    </LinearLayout>



</LinearLayout>