<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/commonColor">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="20dp">
            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_row="0"
                android:textColor="@color/tabColor"
                android:textSize="25dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/user_name"
                android:layout_column="3"
                android:layout_row="0"
                android:textColor="@color/tabColor"
                android:textSize="25dp"
                android:text="@string/own_danji"/>
            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="0">
                <TableRow
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:padding="5dp">
                    <TextView
                        android:id="@+id/my_wall"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textSize="25dp"
                        android:textStyle="bold"
                        android:textColor="@color/tabColor"
                        android:gravity="center"/>
                    <TextView
                        android:id="@+id/my_inbox"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textSize="25dp"
                        android:textStyle="bold"
                        android:textColor="@color/tabColor"
                        android:gravity="center"/>
                </TableRow>

                <TableRow
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:background="@color/tabColor"
                    android:padding="5dp">
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/my_wall"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:textColor="@color/contentsBackroundColor"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"/>
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/my_inbox"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:textColor="@color/contentsBackroundColor"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"/>
                </TableRow>
            </TableLayout>
        </GridLayout>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/drawerColor">
                <ImageButton
                    android:id="@+id/mypage_movie"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_local_movies_white_24dp"
                    android:background="@color/none"
                    android:onClick="myPageButtonClick"/>
                <ImageButton
                    android:id="@+id/mypage_drama"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_live_tv_white_24dp"
                    android:background="@color/none"
                    android:onClick="myPageButtonClick"/>
                <ImageButton
                    android:id="@+id/mypage_book"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_book_white_24dp"
                    android:background="@color/none"
                    android:onClick="myPageButtonClick"/>
                <ImageButton
                    android:id="@+id/mypage_poem"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_filter_vintage_white_24dp"
                    android:background="@color/none"
                    android:onClick="myPageButtonClick"/>
                <ImageButton
                    android:id="@+id/mypage_music"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_music_note_white_24dp"
                    android:background="@color/none"
                    android:onClick="myPageButtonClick"/>
                <ImageButton
                    android:id="@+id/mypage_cartoon"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_insert_emoticon_white_24dp"
                    android:background="@color/none"
                    android:onClick="myPageButtonClick"/>
                <ImageButton
                    android:id="@+id/mypage_inbox"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_inbox_white_24dp"
                    android:background="@color/none"
                    android:onClick="myPageButtonClick"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
    <ListView
        android:id="@+id/mypage_contents"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

</LinearLayout>